# imguipp

./: .gitignore  CMakeLists.txt  README.md
DirectXExample/: CMakeLists.txt  main.cpp
ImGui++/: CMakeLists.txt  backend_includes.h  common.h  imguipp.h  widget.cpp  widget.h  window.cpp  window.h
ImGui++/impl/: dx12_window.cpp  dx12_window.h
ImGui++/widgets/: windowwidget.cpp  windowwidget.h
